--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1> Hello World</h1>
+    <div id='homepage'> </div>
+    <p>This is where all the stuff goes</p>
+    <div id='aboutme'> </div>
+    <div id='resume'> </div>
 </body>
 </html>
